--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --watch ./tests/*.test.js --exit"
+    "test": "mocha ./tests/*.test.js --exit"
   },
   "devDependencies": {
     "chai": "^4.3.4",
